Transferred from the Adobe Open Source Subversion Repository
Revision: 21535
Author:   aharui@adobe.com
Date:     2011-07-11T23:05:05.886021Z

Log Message: 
-----------
In 3.x, creationPolicy inheritance did not apply across non-containers.  This behavior changed in 4.0 and caused viewstacks in item renderers to start creating all of their children, reducing performance.  We are restoring the 3.x behavior for MX List-based and MX AdvancedDataGrid renderers

QE notes: None
Doc notes: None
Bugs: SDK-30616
Reviewer: Glenn
Tests run: Mustella Cyclone
Is noteworthy for integration: No

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/4.y/frameworks/projects/mx/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/4.y/frameworks/projects/advancedgrids/data_management.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1247964 13f79535-47bb-0310-9956-ffa450edef68

--- a/frameworks/projects/advancedgrids/data_management.css
+++ b/frameworks/projects/advancedgrids/data_management.css
@@ -113,6 +113,7 @@ AdvancedDataGridHeaderRenderer
 AdvancedListBase
 {
 	borderStyle: "solid";
+    _creationPolicy: "auto";
 	dropIndicatorSkin: ClassReference("mx.skins.halo.ListDropIndicator");
 	paddingBottom: 2;
 	paddingLeft: 2;
