--- a/projects/advancedgrids/data_management.css
+++ b/projects/advancedgrids/data_management.css
@@ -113,6 +113,7 @@ AdvancedDataGridHeaderRenderer
 AdvancedListBase
 {
 	borderStyle: "solid";
+    _creationPolicy: "auto";
 	dropIndicatorSkin: ClassReference("mx.skins.halo.ListDropIndicator");
 	paddingBottom: 2;
 	paddingLeft: 2;
