Transferred from the Adobe Open Source Subversion Repository
Revision: 21275
Author:   smgilson@adobe.com
Date:     2011-05-18T15:24:08.870209Z

Log Message: 
-----------
Fix broken ASDoc example for PrinAdvancedDataGrid

QE notes: 
Doc notes: 
Bugs: 
Reviewer: 
Tests run: 
Is noteworthy for integration:

Modified Paths:
--------------
/private/flex/sdk/branches/4.y/frameworks/projects/advancedgrids/asdoc/en_US/mx/printing/examples/AdvancedPrintDataGridExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1247979 13f79535-47bb-0310-9956-ffa450edef68

--- a/frameworks/projects/advancedgrids/asdoc/en_US/mx/printing/examples/AdvancedPrintDataGridExample.mxml
+++ b/frameworks/projects/advancedgrids/asdoc/en_US/mx/printing/examples/AdvancedPrintDataGridExample.mxml
@@ -18,18 +18,16 @@
                 // Initialize the PrintAdvancedDataGrid control.
                 var printADG:PrintAdvancedDataGrid = 
                     new PrintAdvancedDataGrid();
-                // Exclude the PrintAdvancedDataGrid control from layout.
-                printADG.includeInLayout = false;
                 printADG.source = adg;
 
                 // Add the print-specific control to the application.                
-                addChild(printADG);
+                addElement(printADG);
                 
                 // Start the print job.
                 if (printJob.start() == false) {                
                     // User cancelled print job.
                     // Remove the print-specific control to free memory.                
-                    removeChild(printADG);
+                    removeElement(printADG);
                     return;
                 }
 
@@ -40,7 +38,7 @@
                 printJob.send();
 
                 // Remove the print-specific control to free memory.                
-                removeChild(printADG);
+                removeElement(printADG);
             }
             
             [Bindable]
